Changed colors and some small stuff

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -87,7 +87,7 @@
   align-items: center;
   justify-content: center;
   height: 120px;
-  background-color: $light-purple;
+  background-color: #d5a28eff;
   color: white;
   padding-bottom: 0;
   img {
