--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,8 @@
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$orange: #ea5033;
+$light-orange: #f8d2c1;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $green: #00896A;
@@ -13,4 +14,5 @@ $bright-pink: #EA504E;
 $pale-pink: #FDF5F6;
 $background-grey: #f1eee9;
 $font-grey: #565454;
+$dark-gray: #343a40;
 
