--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -35,6 +35,6 @@
   </div>
 
 <div class="reservation-buttons">
-  <a href="section-l.com" target="_blank" class="btn btn-success double-button">Book New</a>
+  <a href="https://www.section-l.co" target="_blank" class="btn btn-success double-button">Book New</a>
   <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-success double-button"%>
 </div>
