--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -19,16 +19,16 @@
 
   <ul class="d-flex justify-content-around nav nav-pills nav-fill mb-3 mt-3 button-selected" id="pills-tab" role="tablist">
     <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link active px-1" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Overview</a>
+      <a class="nav-link active px-1 p-1" style="font-size:8px" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><%= image_tag "icons/bed-side.svg", height:25, class:"icon-white" %><br>Overview</a>
     </li>
     <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link" id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Guides</a>
+      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><%= image_tag "icons/bag.svg", height:25, class:"icon-white" %><br>Guides</a>
     </li>
     <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link" id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Buddy</a>
+      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"><%= image_tag "icons/meeting.svg", height:25, class:"icon-white" %><br>Buddy</a>
     </li>
     <li class="nav-item" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link" id="p px-1ills-chat-tab" data-toggle="pill" href="#pills-chat" role="tab" aria-controls="pills-chat" aria-selected="false">Chat</a>
+      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-chat-tab" data-toggle="pill" href="#pills-chat" role="tab" aria-controls="pills-chat" aria-selected="false"><%= image_tag "icons/chat.svg", height:25, class:"icon-white" %><br>Chat</a>
     </li>
   </ul>
   <div class="tab-content" id="pills-tabContent">
@@ -41,7 +41,7 @@
     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
       <%= render 'buddy.html.erb' %>
     </div>
-    <div class="tab-pane fade d-flex" style="flex-direction: column; height: 100%;" id="pills-chat" role="tabpanel" aria-labelledby="pills-chat-tab">
+    <div class="tab-pane fade" id="pills-chat" role="tabpanel" aria-labelledby="pills-chat-tab">
       <%= render 'shared/chat.html.erb', reservation: @reservation, message:@message %>
     </div>
   </div>
