--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "container";
 @import "button";
 @import "font_color";
@@ -11,3 +10,4 @@
 @import "icon";
 @import "request_card";
 @import "reservation_card";
+@import "header";
