--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,14 +1,21 @@
-<%= render 'shared/back', path: "root_path" %>
 
-<div class="container-title">
-  <h1 class="font-green mb-0">Your Stays</h1>
-  <div class="logo-container">
-    <%= image_tag 'logo.png', class: 'logo-sm' %>
+<div class="container-fluid d-flex flex-column align-items-center">
+  <h1 class="mb-0 ">Your Stays</h1>
+  <div class="d-flex align-items-center justify-content-center arrows">
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
   </div>
+</div>
 
-  </div>
-  <div class="container-reservation">
-    <h5 class="mb-0">Upcoming</h5>
+<div class="container-reservation">
+  <% @upcoming_reservations.each do |reservation| %>
+    <%= render 'reservations/reservation_card', reservation: reservation %>
+  <% end %>
+  <% if @past_reservations.length > 0 %>
+    <h5 class="mb-0">Where you've stayed</h5>
     <div class="container-arrows">
       <%= image_tag("icons/arrow-down.svg", height:20) %>
       <%= image_tag("icons/arrow-down.svg", height:20) %>
@@ -16,25 +23,13 @@
       <%= image_tag("icons/arrow-down.svg", height:20) %>
       <%= image_tag("icons/arrow-down.svg", height:20) %>
     </div>
-    <% @upcoming_reservations.each do |reservation| %>
+    <% @past_reservations.each do |reservation| %>
       <%= render 'reservations/reservation_card', reservation: reservation %>
     <% end %>
-    <% if @past_reservations.length > 0 %>
-      <h5 class="mb-0">Where you've stayed</h5>
-      <div class="container-arrows">
-        <%= image_tag("icons/arrow-down.svg", height:20) %>
-        <%= image_tag("icons/arrow-down.svg", height:20) %>
-        <%= image_tag("icons/arrow-down.svg", height:20) %>
-        <%= image_tag("icons/arrow-down.svg", height:20) %>
-        <%= image_tag("icons/arrow-down.svg", height:20) %>
-      </div>
-      <% @past_reservations.each do |reservation| %>
-        <%= render 'reservations/reservation_card', reservation: reservation %>
-      <% end %>
-    <% end %>
-  </div>
+  <% end %>
+</div>
 
 <div class="reservation-buttons">
-  <a href="section-l.com" target="_blank" class="btn btn-success double-button">Book New</a>
+  <a href="https://www.section-l.co/" target="_blank" class="btn btn-success double-button">Book New</a>
   <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-success double-button"%>
 </div>
