--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -12,7 +12,7 @@
                   error: 'Reservation number is required'%>
       <%= f.input :check_in_date,
                   required: true,
-                  input_html: { autocomplete: "check_in_date" }%>
+                  input_html: { autocomplete: "check_in_date", type: "date" }%>
     </div>
 
     <div class="mt-3">
