--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -1,16 +1,13 @@
 <%= render 'shared/back', path: "staff_reservations_path" %>
 
 <div class="container mt-3">
-  <div class="logo-container">
-    <%= image_tag 'logo.png', class: 'logo-sm' %>
-  </div>
   <div class="container-fluid px-0">
     <h1 class="font-green mb-0"><%= @reservation.user.first_name %>'s Room</h1>
-    <%= image_tag("icons/arrow-down.svg", height:25) %>
-    <%= image_tag("icons/arrow-down.svg", height:25) %>
-    <%= image_tag("icons/arrow-down.svg", height:25) %>
-    <%= image_tag("icons/arrow-down.svg", height:25) %>
-    <%= image_tag("icons/arrow-down.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
 
     <% room_type = (@reservation.room_number % 10).to_s %>
     <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
