--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,5 @@
 <div class="row header">
-  <%= image_tag 'logo.png', class: 'logo-sm' %>
+  <%= link_to root_path do %>
+    <%= image_tag 'logo.png', class: 'logo-sm' %>
+  <% end %>
 </div>
