--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/back', path: 'root_path' %>
+
 
 <div class="container-fluid d-flex flex-column align-items-center">
   <h1 class="mb-0 ">Your Stays</h1>
