--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,6 +20,18 @@
   color: white !important;
 }
 
+.reservation-sticky-buttons {
+  flex-grow: 0;
+  align-self: flex-end;
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 8px;
+  background-color: white;
+}
 
 .nav-pills .nav-link {
   color: white;
@@ -31,13 +43,22 @@
   color: $orange;
   background-color: white;
   border: 1px solid $orange;
+  img {
+    filter: invert(0.3);
+  }
 }
 
 .back-button {
+  position: absolute;
+  top: 2.5vw;
+  left: 2.5vw;
+  width: 40px;
   color: black;
+  border: 1px solid black;
+  padding: 6px;
   text-align: center;
   border-radius: 50%;
-  background-color: white;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3)
+  &:hover {
+    transform: translateY(-1px);
+  }
 }
-
