--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/back', path: 'reservations_path' %>
+
 <div class="container">
   <div class="container-fluid d-flex flex-column align-items-center">
     <h1 class="mb-0 ">Current Stay</h1>
@@ -11,22 +13,8 @@
   </div>
 
   <% room_type = (@reservation.room_number % 10).to_s %>
-  <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
+  <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1 mb-2")  %>
 
-  <ul class="d-flex justify-content-around nav nav-pills nav-fill mb-3 mt-3 button-selected" id="pills-tab" role="tablist">
-    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link active px-1 p-1" style="font-size:8px" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><%= image_tag "icons/bed-side.svg", height:25, class:"icon-white" %><br>Overview</a>
-    </li>
-    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><%= image_tag "icons/bag.svg", height:25, class:"icon-white" %><br>Guides</a>
-    </li>
-    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"><%= image_tag "icons/meeting.svg", height:25, class:"icon-white" %><br>Buddy</a>
-    </li>
-    <li class="nav-item" style="flex-basis: 23%;" role="presentation">
-      <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-chat-tab" data-toggle="pill" href="#pills-chat" role="tab" aria-controls="pills-chat" aria-selected="false"><%= image_tag "icons/chat.svg", height:25, class:"icon-white" %><br>Chat</a>
-    </li>
-  </ul>
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
       <%= render 'reservation_overview', reservation: @reservation %>
@@ -41,6 +29,19 @@
       <%= render 'shared/chat.html.erb', reservation: @reservation, message:@message %>
     </div>
   </div>
- </div>
+</div>
 
-  <%#= render 'change_times', reservation: @reservation %>
+<ul class="nav nav-pills nav-fill button-selected reservation-sticky-buttons" id="pills-tab" role="tablist">
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link active px-1 p-1" style="font-size:8px" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><%= image_tag "icons/bed-side.svg", height:25, class:"icon-white" %><br>Overview</a>
+  </li>
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><%= image_tag "icons/bag.svg", height:25, class:"icon-white" %><br>Guides</a>
+  </li>
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"><%= image_tag "icons/meeting.svg", height:25, class:"icon-white" %><br>Buddy</a>
+  </li>
+  <li class="nav-item" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-chat-tab" data-toggle="pill" href="#pills-chat" role="tab" aria-controls="pills-chat" aria-selected="false"><%= image_tag "icons/chat.svg", height:25, class:"icon-white" %><br>Chat</a>
+  </li>
+</ul>
