--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -2,10 +2,8 @@
 
 <div class="container mt-3">
   <div class="container-fluid px-0">
-    <%= render 'reservations/title_down_arrows', text: "#{@reservation.user.first_name}'s Room
-" %>
+    <%= render 'reservations/title_down_arrows', text: "#{@reservation.user.first_name}'s Room" %>
 
-@reservation.user.first_name %>'s Room
     <% room_type = (@reservation.room_number % 10).to_s %>
     <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
 
