--- a/app/views/reservations/_reservation_overview.html.erb
+++ b/app/views/reservations/_reservation_overview.html.erb
@@ -36,7 +36,7 @@
 
   <button type="button" class="btn btn-dark button-full-width mt-1 mb-1">Read Check-In Manual</button>
 
-  <div class="card-show-page mt-3 pb-3">
+  <div class="card-show-page mt-3 mb-3 pb-3">
     <p class="font-bright-pink mb-2">Amenities </p>
     <div class="container-flex-amenities">
       <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
