--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<ul class="nav nav-pills nav-fill button-selected reservation-sticky-buttons" id="pills-tab" role="tablist">
+<ul class="nav nav-pills nav-fill button-selected bottom-sticky reservation-sticky-buttons" id="pills-tab" role="tablist">
   <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
     <a class="nav-link active px-1 p-1" style="font-size:8px" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><%= image_tag "icons/bed-side.svg", height:25, class:"icon-white" %><br>Overview</a>
   </li>
